--- a/java/.classpath
+++ b/java/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="src/bibliotecas externas/simple/simple-transport-6.0.1.jar"/>
 	<classpathentry kind="lib" path="src/bibliotecas externas/simple/simple-xml-2.7.1.jar"/>
 	<classpathentry kind="lib" path="src/bibliotecas externas/json-20160810.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin"/><classpathentry kind="lib"
+		path="src/bibliotecas externas/gson-2.8.0.jar">
+</classpathentry>
 </classpath>
